# BullCapital1

./: .env.example  .gitignore  requirements.txt
backend/: docker-compose.yml
backend/ai-service/: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
backend/ai-service/app/: api_server.py  main.py
backend/ai-service/app/agent/: financial_agent.py
backend/ai-service/app/core/: config.py  database.py  models.py
backend/ai-service/app/prompts/: multiplos_prompt.txt  valuation_prompt.txt
backend/auth-service/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/auth-service/app/: __init__.py  app.py  main.py
backend/auth-service/app/api/: __init__.py  auth.py
backend/auth-service/app/core/: __init__.py  config.py  database.py  models.py  security.py
backend/auth-service/app/crud/: __init__.py  user.py
backend/auth-service/app/migrations/: add_google_oauth_support.py
backend/auth-service/app/schemas/: __init__.py  user.py
backend/auth-service/app/services/: __init__.py  auth_service.py  google_oauth_service.py
backend/auth-service/app/utils/: __init__.py  validators.py
backend/gateway-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/gateway-service/core/: config.py
backend/gateway-service/models/: auth_models.py
backend/gateway-service/models/requests/: ai_financial_request.py
backend/gateway-service/models/responses/: ai_financial_response.py  market_data_response.py
backend/gateway-service/routers/: gateway_ai.py  gateway_auth.py  gateway_market_data.py
backend/market-data-service/: .gitignore  DOCKER.md  Dockerfile  README.md  docker.sh  pyproject.toml  requirements.txt
backend/market-data-service/app/: __init__.py  main.py
backend/market-data-service/app/api/: __init__.py  market_data.py
backend/market-data-service/app/cadu/: caching.py  frontend_api.py  yfinance_logic.py
backend/market-data-service/app/core/: __init__.py  config.py  logging.py
backend/market-data-service/app/models/: __init__.py  requests.py  responses.py
backend/market-data-service/app/services/: __init__.py  interfaces.py  market_data_service.py  yahoo_finance_provider.py
backend/market-data-service/app/utils/: Ticker_ops.py  __init__.py  validators.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/features/ai-assistant/: message.tsx  messagesScroll.tsx  sidebar.tsx  sidebarfooter.tsx  sidebarheader.tsx
frontend/src/components/features/assets-chart/: asset-chart.tsx
frontend/src/components/features/highlights-overview/: highlights-card.tsx  highlights-dividend-card.tsx  highlights-overview.tsx  listskeleton.tsx
frontend/src/components/features/market-overview/: boxskeleton.tsx  market-overview.tsx
frontend/src/components/ui/: carousel.tsx  dropdown-menu.tsx  footer.tsx  header.tsx  loginform.tsx  loginmodal.tsx  logo.tsx  mode-toggle.tsx  path-link.tsx  question-mark.tsx  registerform.tsx  search-bar.tsx  skeleton.tsx  table.tsx  tooltip.tsx
frontend/src/contexts/: theme-provider.tsx
frontend/src/data/: categoria-data.ts  indexes-data.ts  sector-data.tsx
frontend/src/hooks/queries/: queries-config.ts  useauth.ts  usecategories.ts  usedividends.ts  usehealth.ts  usehistory.ts  usemarketoverview.ts  usenews.ts  useperformance.ts  usesearch.ts  useticker.ts
frontend/src/hooks/utils/: useaddparams.ts  usedatacard.ts
frontend/src/lib/: utils.ts
frontend/src/pages/: asset.tsx  home.tsx  ranking.tsx
frontend/src/services/: api.ts  auth-service.ts  categories-service.ts  dividends-service.ts  health-service.ts  history-service.ts  marketoverview-service.ts  news-service.ts  performance-service.ts  search-service.ts  tickers-service.ts
frontend/src/types/: assets.ts  category.ts  dividends.ts  health.ts  history.ts  marketoverview.ts  news.ts  performance.ts  search.ts  ticker.ts  user.ts
ia/: main.py  pyproject.toml  rag.py  relatorio_agenticRag.py
ia/Agent/: __init__.py  financial_agent.py  models.py  test_api.py
ia/valuation/: capm.py  example_agent.py
(+2 files in other folders)
