[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-data-service"
version = "1.0.0"
description = "Microserviço para dados de mercado financeiro"
requires-python = ">=3.12"
authors = [
    {name = "BullCapital Team", email = "dev@bullcapital.com"},
]
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "yfinance>=0.2.28",
    "pandas>=2.1.4",
    "numpy>=1.26.2",
    "python-multipart>=0.0.6",
    "httpx>=0.25.2",
    "sqlalchemy>=2.0.41",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
    "investpy>=1.0.8",
    "yahooquery>=2.4.1",
    "ruff>=0.12.7",
    "deep-translator>=1.11.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "black>=23.11.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
    "mypy>=1.7.1",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.hatch.build.targets.wheel]
packages = ["app"]
